# kubescope

./: .goreleaser.yaml  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  publish.yml  release.yml
crates/kubescope-k8s/: Cargo.toml
crates/kubescope-k8s/src/: client.rs  lib.rs
crates/kubescope-logs/: Cargo.toml
crates/kubescope-logs/src/: buffer.rs  filter.rs  lib.rs  parser.rs  stream.rs
crates/kubescope-tui/: Cargo.toml
crates/kubescope-tui/src/: lib.rs
crates/kubescope-tui/src/app/: action.rs  mod.rs  state.rs
crates/kubescope-tui/src/config/: keybindings.rs  mod.rs
crates/kubescope-tui/src/tui/: event.rs  mod.rs  terminal.rs
crates/kubescope-tui/src/ui/: layout.rs  mod.rs  theme.rs
crates/kubescope-tui/src/ui/components/: command_palette.rs  help_overlay.rs  json_key_filter.rs  list_selector.rs  mod.rs
crates/kubescope-tui/src/ui/screens/: context_select.rs  deployment_select.rs  log_viewer.rs  mod.rs  namespace_select.rs
crates/kubescope-types/: Cargo.toml
crates/kubescope-types/src/: lib.rs
src/: k8s.rs  main.rs  token_cache.rs  types.rs
src/app/: action.rs  mod.rs  state.rs
src/config/: keybindings.rs  mod.rs
src/logs/: buffer.rs  filter.rs  mod.rs  parser.rs  stream.rs
src/tui/: event.rs  mod.rs  terminal.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/components/: command_palette.rs  help_overlay.rs  json_key_filter.rs  mod.rs  status_bar.rs
src/ui/screens/: deployment_select.rs  log_viewer.rs  mod.rs  namespace_select.rs
