[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared across crates
tokio = { version = "1.42", features = ["full", "sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Kubernetes
kube = { version = "0.98", features = ["client", "config"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Processing
regex = "1.11"
parking_lot = "0.12"

# CLI & logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
unicode-width = "0.2"

# Internal crates
kubescope-types = { path = "crates/kubescope-types" }
kubescope-k8s = { path = "crates/kubescope-k8s" }
kubescope-logs = { path = "crates/kubescope-logs" }
kubescope-tui = { path = "crates/kubescope-tui" }

[package]
name = "kubescope"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A terminal UI for viewing Kubernetes deployment logs"

[dependencies]
kubescope-types.workspace = true
kubescope-k8s.workspace = true
kubescope-logs.workspace = true
kubescope-tui.workspace = true
tokio.workspace = true
kube.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
