[package]
name = "kubescope"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A terminal UI for viewing Kubernetes deployment logs"
authors = ["stvnksslr"]
repository = "https://github.com/stvnksslr/kubescope"
keywords = ["kubernetes", "logs", "tui", "terminal", "k8s"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kubescope"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full", "sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
futures = "0.3"

# Kubernetes
kube = { version = "0.98", features = ["client", "config"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for log filtering
regex = "1.11"

# Thread-safe primitives
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
strip = true
codegen-units = 3

[profile.dev]
codegen-units = 1

[profile.test]
codegen-units = 1
