[package]
name = "kubescope-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for kubescope"

[dependencies]
kubescope-types.workspace = true
kubescope-k8s.workspace = true
kubescope-logs.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde_json.workspace = true
chrono.workspace = true
